# art-voice-agent-accelerator

./: .dockerignore  .env.a368600  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TROUBLESHOOTING.md  azure.yaml  docker-compose.yml  environment.yaml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-codequality.txt  requirements-docs.txt  requirements.txt  setup.py  test.ps1
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/: copilot-instructions.md
.github/actions/: azd-rtagent-deploy.yml
.github/instructions/: api-endpoints.instructions.md  coding-standards.instructions.md  llm-guide.instructions.md  python.instructions.md  system-architecture.instructions.md
.github/skills/: README.md
.github/workflows/: README.md  _template-deploy-azd.yml  azure-dev.yml  deploy-azd-complete.yml  deploy-azd.yml  deploy-infrastructure.yml  docs.yml  evaluate-scenarios.yml  test-azd-hooks.yml  test-evaluation-framework.yml
_agent_plan/: SUMMARY.md  agent_scenario_state_leak_analysis.md  baseline_validation.md  docs_agent_breakdown.md  docs_audit_plan.md  docs_reorganization_plan.md  evaluation_framework_analysis.md  evaluation_refactor_design.md  evaluation_refactor_spec.md  github-issues.md  handoff_consolidation_plan.md  hotfix_plan.md  responses_api_migration.md  root_cause_analysis.md
_agent_plan/1-25/: evaluation_simplification_plan.md
apps/: README.md
apps/webchat-demo/: Dockerfile  README.md  entrypoint.sh  index.html  package.json  vite.config.js
config/: appconfig.json
devops/: azure-bicep.yaml  backend_apis.rest  docker-compose.yml
devops/scripts/: configure-phone-number.sh  deploy.sh  generate-env-from-terraform.sh  generate_test_audio.py  preflight-check.sh  quick_health_check.sh  test-webchat-demo.sh  webapp-deploy.sh
devops/security/: bandit_to_sarif.py  run_bandit.py
docs/: ACSBargeInFlow.md  ApplicationInsights.md  AuthForHTTPandWSS.md  DeploymentGuide.md  V1-Realtime-Integration-Summary.md  WebsocketAuth.md  github-pages-setup.md  index.md  mkdocs.yml
docs/agents/: agent-consolidation-plan.md
docs/api/: README.md  api-reference.md  overview.md  speech-synthesis.md
docs/architecture/: CHANGELOG-ARCHITECTURE.md  README.md  telemetry.md
docs/deployment/: README.md  email-setup.md  lessons-learned.md  phone-number-setup.md
docs/getting-started/: README.md  demo-guide.md  installation.md  local-development.md  prerequisites.md  quickstart.md
docs/guides/: omnichannel-demo-script.md  whatsapp-integration.md
docs/industry/: README.md  banking.md  insurance.md  utilities.md
docs/operations/: testing.md  troubleshooting.md
docs/testing/: deployment-verification.md  evaluation.md  index.md  model-evaluation.md
fnol_reports/: CLA-2025-82N2BY.docx
infra/: README.md  ai-gateway.bicep  app.bicep  appgw-avm.bicep  appgw-avm.bicepparam  main.bicep  main.parameters.json
infra-tf/: apps.tf  main.tf  main.tfvars.json  outputs.tf  variables.tf
infra/terraform/: README.md  ai-foundry-vl.tf  ai-foundry.tf  ai-services.tf  appconfig.tf  apps.tf  communication.tf  containers.tf  core.tf  data.tf  keyvault.tf  main.tf  outputs.tf  redis.tf  terraform.tfvars.back  terraform.tfvars.example  variables.tf  webchat-demo.tf  whatsapp.tf
labs/: 01-build-your-audio-agent.ipynb  02-how-to-gpt4o-transcribe.ipynb  02-how-to-use-aoai-for-realtime-transcriptions.ipynb  03-latency-arena.ipynb
rtagents/RTMedAgent/: README.md
samples/: README.md
samples/hello_world/: 01-create-your-first-rt-agent.ipynb  02-run-test-rt-agent.ipynb  04-exploring-live-api.ipynb  05-create-your-first-livevoice.ipynb
samples/labs/: 03-latency-arena.ipynb  05-speech-to-text-multilingual.ipynb  08-speech-to-text-diarization.ipynb
samples/voice_live_sdk/: .env.sample  Makefile  helloworld.py
scripts/azd/: azd-appsvc-deploy.sh  postdeploy.sh  postprovision.sh  predeploy.sh  preprovision.sh
src/: __init__.py
src/acs/: __init__.py  acs_helper.py  email_service.py  email_templates.py  sms_service.py  sms_templates.py
src/agenticmemory/: memoriesbuilder.py  playback_queue.py  types.py  utils.py
src/aoai/: audio_util.py  client.py  client_manager.py  manager.py  manager_transcribe.py  push_to_talk.py
src/blob/: blob_helper.py
src/cosmosdb/: config.py  manager.py
src/enums/: monitoring.py  stream_modes.py
src/pools/: __init__.py  aoai_pool.py  async_pool.py  connection_manager.py  dedicated_tts_pool.py  on_demand_pool.py  session_manager.py  session_metrics.py  warmable_pool.py  websocket_manager.py
src/postcall/: push.py
src/prompts/: prompt_manager.py
src/redis/: README.md  __backup.py  async_manager.py  key_manager.py  manager.py  models.py
src/speech/: auth_manager.py  conversation_recognizer.py  phrase_list_manager.py  speech_recognizer.py  speech_to_text.py  (+3 more)
tests/: backend.http  conftest.py  test_acs_events_handlers.py  test_acs_media_lifecycle.py  test_acs_media_lifecycle_memory.py  test_acs_simple.py  test_aoai_manager_invocation.py  test_artagent_wshelpers.py  test_call_transfer_service.py  test_channel_handoff_integration.py  test_communication_services.py  test_cosmosdb_manager_ttl.py  test_demo_env_phrase_bias.py  test_discrete_handoff_consistency.py  test_dtmf_validation.py  test_dtmf_validation_failure_cancellation.py  test_events_architecture_simple.py  test_generic_handoff_tool.py  test_handoff_service.py  test_memo_optimization.py  test_on_demand_pool.py  test_phrase_list_manager.py  test_realtime.py  test_redis_manager.py  test_scenario_builder_custom_agents.py  test_scenario_orchestration_contracts.py  test_session_agent_manager.py  test_speech_phrase_list.py  test_speech_queue.py  test_utilities_scenario.py  test_v1_events_integration.py  test_voice_handler_compat.py  test_voice_handler_components.py  test_voice_handler_threading.py  test_voicelive_memory.py  test_warmable_pool.py  validate_tool_functions.py
utils/: azure_auth.py  ml_logging.py  pii_filter.py  session_context.py  telemetry_config.py  telemetry_decorators.py  trace_context.py
(+638 files in other folders)
